--- a/manual.html
+++ b/manual.html
@@ -7762,5 +7762,5 @@ using the <a class="ulink" href="http://xmlsoft.org/XSLT/" target="_top">Gnome X
 toolkit</a>.
 </p></div></div></div>
 <script src="auto-complete.js"></script>
-<script src="search.js"></script>
+<script src="mutt_toc_jump.js"></script>
 </body></html>
