add minified build

--- a/test/manual.html
+++ b/test/manual.html
@@ -7761,14 +7761,14 @@ This document was written in <a class="ulink" href="http://docbook.sourceforge.n
 using the <a class="ulink" href="http://xmlsoft.org/XSLT/" target="_top">Gnome XSLT
 toolkit</a>.
 </p></div></div></div>
-<script src="../build.development/mutt_toc_jumper.umd.js"></script>
+<script src="../dist/toc-jumper.development.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    var mtj = new MuttTocJumper({
+    var tj = new TocJumper({
 	selector: '.titlepage .title',
 	transform: function(str) { return str.replace(/^[0-9.\s]+/, '') }
     })
-    mtj.hook()
+    tj.hook()
 })
 </script>
 </body></html>
